knative/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predict-deployment
  labels:
    app: prdeict
spec:
  replicas: 1
  selector:
    matchLabels:
      app: predict
  template:
    metadata:
      labels:
        app: predict
    spec:
      containers:
      - name: predict
        image: predict:1.14.2
        ports:
        - containerPort: 5000
